// $Id$
context_ui DRUPAL-6--1
----------------------
- Added an experimental path-based context setter.
- #336469: Fixing sticky checkbox for hidden blocks and using more
  human-friendly labels in block UI. From dmitrig01.
- #367775: Consistifying use of namespace/attribute/value delimiters
  in code. From dmitrig01.
- Fixed for menu primary/secondary link menu active trail handling --
  previously only secondary links would receive a context-based active
  class when both were employed.
- #356960: Fix for context_ui_set() error where an array of IDs are
  passed. context_ui_set() no longer accepts arrays for the $id
  parameter. Reported by loze.
- #356626: Adding patch to improve performance and integration with
  memcache & aggressive caching. From m3avrck.

context_ui DRUPAL-6--1-0-alpha-3
--------------------------------
- Update to README.txt to reflect updated menu links functionality and
  include basic list of hooks provided by context_ui.
- Update to DB schema to reflect new storage system. Update script
  included.
- Improved namespace consistency -- all hooks now use context_ui
  rather that context as their function prefix.
- Moved deprecated functions / backwards-compatibility functions to
  the end of context_ui.module.
- Major refactoring of context storage schema. Contexts are now cached
  for performance and default contexts are no longer stored in the
  database.
- Updated context_ui_block_list() to respect block visbility
  and title customizations made through the block module.
- Added context-based region disabling for basic alteration of the
  theme layout through context.
- Improved granularity of Views integration -- each page view can now
  be specified separately as a context setter.

context_ui DRUPAL-6--1-0-alpha-2
--------------------------------
- Starting changelog from here. Better late than never.